Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/liutian1937/Jwalk">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/liutian1937/jwalk">View on GitHub</a>
 
           <h1 id="project_title">Jwalk</h1>
           <h2 id="project_tagline">Jwalk - JavaScript Animation Library . Smaller , Faster , Stronger</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/liutian1937/Jwalk/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/liutian1937/Jwalk/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/liutian1937/jwalk/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/liutian1937/jwalk/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
