--- a/demo.html
+++ b/demo.html
@@ -164,13 +164,13 @@ function openHide(elem,actId){
 								</p>
 							</div>
 						</div><div class="pure-u-1-5 align-center">
-							<a href="#" class="sansfont center-name" target="_blank">
+							<a href="http://liutian1937.github.io/Jwalk/index.html" class="sansfont center-name" target="_blank">
 								Jwalk
 							</a>
 						</div><div class="pure-u-2-5">
 							<div class="padding-box-1 bottom-right">
 								<p class="sansfont">
-									<a href="https://github.com/yui/pure/">GitHub Project</a><br/>
+									<a href="https://github.com/liutian1937/Jwalk" target="_blank">GitHub Project</a><br/>
 									<span class="copyright">© 2013 XxOo. All rights reserved.</span>
 								</p>
 							</div>
