--- a/start.html
+++ b/start.html
@@ -72,7 +72,7 @@ Jwalk(elem,{
 //如果采用默认设置的话直接
 Jwalk(elem)
 </pre>
-							<p><span class="notice">不同与Jquery的地方是，jquery直接定义animate即可执行动画，Jwalk需要定义animate之后执行<b>play/replay/cycle()</b>方法才会执行。</span><br/>如果有多个animate执行，建议初始化的时候进行animate定义。实现控制部分与初始化分离，初始化animate后，可以通过<code>step()</code>设置执行顺序，step参数从0开始。</p>
+							<p><span>不同与Jquery的地方是，jquery直接定义animate即可执行动画，Jwalk需要定义animate之后执行<b>play/replay/cycle()</b>方法才会执行。</span><br/>如果有多个animate执行，建议初始化的时候进行animate定义。实现控制部分与初始化分离，初始化animate后，可以通过<code>step()</code>设置执行顺序，step参数从0开始。</p>
 						</div>
 					</div>
 					
