--- a/index.html
+++ b/index.html
@@ -201,9 +201,11 @@ function move(type){
 	Jwalk(elem).animate({marginLeft:per},300).play();
 }
 </script>
+<div style="display:none">
 <script type="text/javascript">
 var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ffdeb9d0d401f0a62f3f964c6141201b2' type='text/javascript'%3E%3C/script%3E"));
 </script>
+</div>
 </body>
 </html>
